Fixed word wrap when there's no space in seqs

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,11 +14,9 @@ pre {
   color: blue;
 }
 pre {
-  white-space: pre-wrap; /* css-3 */
-  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
-  white-space: -pre-wrap; /* Opera 4-6 */
-  white-space: -o-pre-wrap; /* Opera 7 */
-  word-wrap: break-word; /* Internet Explorer 5.5+ */
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 h1 {
   font-size: 2.5em;
